# ChangeLog for net-misc/dropbox
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jul 2010; mva <mva@mva.name> dropbox-0.7.110.ebuild, +metadata.xml:
  fixed description, added metadata and changelog
