@@ -2,8 +2,8 @@ AUX spectrum.cfg 4770 RMD160 1dfba51b4c4ee6f991b3082a8cf4f4b0234cf8b0 SHA1 c321c
 AUX spectrum.confd 157 RMD160 dec3aebc84f379e42faf6760dc0524b960541f4c SHA1 7894af53b8aebf457a4d5de81ffee35843563d01 SHA256 5f1c7a7c614ffb15ba64caadd560088cf3a8032f3973489a31f65c89ce286c85
 AUX spectrum.initd 548 RMD160 ea5bbfdec4c71f1e6bbf3ef04b0b0b961803bbee SHA1 2cf0114bb19c22a92bd78e7396419472c4da6d17 SHA256 8e6d6c07ecf14c458abe9ab42d959b333a95a6dc199e0839b8df63bd8b404d01
 AUX spectrum.symlink.cfg 4855 RMD160 8e4cf7ab0237dfff0f713a32e37d2630af777273 SHA1 22a17ecc225fe6a9237947c35126b32c0f3a9447 SHA256 3dfb88f041ae3a835241ea4c128ce6958a95f944534349aebdb56d9d74efe1f3
-DIST spectrum-1.4.6.tar.gz 228874 RMD160 1e39e779451ac9e73d59b59075b09a9644197b2d SHA1 677b3e67b5267f1379ebb119b7b44ee340a3ece5 SHA256 02ed75ad6ebb6d971891cfe802e040cac55ac0a4c4a9263d4b69b51afce6a4ec
-EBUILD spectrum-1.4.6.ebuild 3666 RMD160 9d00264817839f8003591b1221c7705edf196093 SHA1 85f02b62a203c10ebd354064fbc69a00b40f5ca4 SHA256 cbacb4bd4f24db094b44eaec7fb3ee1b0a4ea106e7ff56f62b0a92a35b8c3c0e
-EBUILD spectrum-9999.ebuild 3638 RMD160 25107126b3bce4bb4ef4e728d978ba5b852f0f37 SHA1 cfc4dd25b6eb8b28a72108d589cbad94fe4b2232 SHA256 a90556fdbfad83b21072a5b65c802cb08bd0f2eba88b284e14be1db29b187c82
+DIST spectrum-1.4.7.tar.gz 235303 RMD160 22db29cdd321a1fc7d77db7eb09c19cb49c963d6 SHA1 d07c198090ee1b0404d7641546d2feb56e912ea7 SHA256 6e8049c7c2370613b94377a4c17c32806032488b194bb26e694f4a4e75bd550d
+EBUILD spectrum-1.4.7.ebuild 3694 RMD160 8fd3101d93eb43a694cc91587bc480c13b22086b SHA1 277c1b5ed8284762df9e8e606f3d8e26989b2f9f SHA256 51f5316f9a6374e65caa2e05a72b408a2391551b26fad5649ff65b0d53469b8c
+EBUILD spectrum-9999.ebuild 3666 RMD160 88bf5ddf7885c7046e5d19f146e350eeec8ec445 SHA1 2500fff58e445c430217c56976e0af74d83505c6 SHA256 67bd7ed8b7a9fba56233d521e0d8f7c3d6615343c06d391979a61402ad334981
 MISC ChangeLog 1016 RMD160 215b407467ac44c40095525e0d87f8e91c43d1c4 SHA1 6aa61a999a54d515699818dbb2b85ba4150fde51 SHA256 aa61032f586cf51dba51b76cd02bcecc739ae8e168436a53e9f2b2919ca3d950
 MISC metadata.xml 496 RMD160 a40d8fead24c341b477872cd91c4c13295f8ba83 SHA1 b0370d9eaaccc1c2a7521e0879ff661bfcdc88a0 SHA256 22ae51096c9ad750e1f93ce2bb3f114cea7fdca8a83138cd4df82e2f073d8e3a
