@@ -8,7 +8,7 @@ inherit cmake-utils
 DESCRIPTION="Spectrum is an XMPP transport/gateway"
 HOMEPAGE="http://spectrum.im"
 
-SRC_URI="http://spectrum.im/attachments/download/34/spectrum-${PV}.tar.gz"
+SRC_URI="http://spectrum.im/attachments/download/37/spectrum-${PV}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -19,7 +19,8 @@ IUSE="mysql sqlite symlinks tools"
 RDEPEND=">=dev-libs/poco-1.3.3[mysql?,sqlite?]
 	>=net-im/pidgin-2.6.0
 	>=net-libs/gloox-1.0
-	dev-python/xmpppy"
+	dev-python/xmpppy
+	media-gfx/imagemagick[cxx]"
 DEPEND="${RDEPEND}
 	sys-devel/gettext
 	dev-util/cmake"
