@@ -21,7 +21,8 @@ IUSE="mysql sqlite symlinks tools"
 RDEPEND=">=dev-libs/poco-1.3.3[mysql?,sqlite?]
 	>=net-im/pidgin-2.6.0
 	>=net-libs/gloox-1.0
-	dev-python/xmpppy"
+	dev-python/xmpppy
+	media-gfx/imagemagick[cxx]"
 DEPEND="${RDEPEND}
 	sys-devel/gettext
 	dev-util/cmake"
