@@ -1,5 +1,5 @@
-DIST dropbox-lnx.x86-0.7.110.tar.gz 13121925 RMD160 bdc8ef448975ec843a7b4f6ceb28b745f629c8a2 SHA1 290d6f7a0a0b792a97e6f68073ddaf45168ac516 SHA256 c0bf86580d7d56f1c8dd5de0e03fff330646e57080d749ef4bd529c19e42de58
-DIST dropbox-lnx.x86_64-0.7.110.tar.gz 13913378 RMD160 98abbdcf31bc34bce0d045d4890c7cc3137a23e6 SHA1 d1c1a1645dcd31bc993d0adb8b3b8a99093eb563 SHA256 16e972d31c33bde875df5baa49b6d260f219a5f7aedf16edf4c74e3d1434435f
-EBUILD dropbox-0.7.110.ebuild 1161 RMD160 324a2da3a139808fcd15ebc7c2462673cc4d2cc2 SHA1 f1f7090398251344aaf5f97be3e5d27d4d5fb4c4 SHA256 e9bacbfc5d7036189a12c7996598cfca8ef3eeb1f10ce0afb7d0a36a7be513e0
-MISC ChangeLog 241 RMD160 24ccdd568ebce197215eb4841c59da293ce15d5e SHA1 4ffaa48c0b239cd3b0e07a428bf13ed5f07871c4 SHA256 0310beae95be4dd48f8a476c87f4fe026a52d589a26d5ec70ecba87d64435d10
+DIST dropbox-lnx.x86-1.0.20.tar.gz 14426917 RMD160 d32e3dad718e175e0b3ae2e2a25687a106dcf211 SHA1 71c343d67f91d2de584ef0d9eb4bc059d4222328 SHA256 60705266e783ffeffddc018e56d499715654c82a20665707bfddd4815f22f173
+DIST dropbox-lnx.x86_64-1.0.20.tar.gz 15217537 RMD160 8cf94fac3f79deba9cea57b2e7214742b38c8ad8 SHA1 9191bf6e16adeab520cdc7e9d135a82dbed0bbae SHA256 3bf76334464340d3a9afd3f8c3aad5fbb00b9f352fe7fd59b8afe0ece533a8ac
+EBUILD dropbox-1.0.20.ebuild 1126 RMD160 e53faffe91636f2c4f7c3f752659c099690ddf44 SHA1 2593f438dd80500ef2f201b9eb845f7b1a57a756 SHA256 90de54ecc1927edbf3b895a6fe32884acb7be5afa458d5f1ef08e6c8aebd3d88
+MISC ChangeLog 378 RMD160 d0729059a7e8dd10cb15a1fb386f9c044f0f0b3d SHA1 5bfd1c47b8d7849815a6c6d7a300be0290fb7f50 SHA256 c0e101cb47af5177eb68a035c4865225ccd530c6a05bb7f36d6b823ec76cdf06
 MISC metadata.xml 407 RMD160 6d74d26680de3feb2b580c07284f543a4a5737e9 SHA1 d964dc616bc6224ee260650e45d41697360b108c SHA256 99c0cddbd67bfd02dbe6fcbd6502d5034eec231cd0943a0a46fb22ec16806eb1
